Reduce session server lookups (#509)
* fix: add default skin to gameprofiles

* fix: add signatures by default to prevent issues

* cleanup

* no longer apply empty textures

* revert formatting change

* fix(spigot): linked player textures

* fix(velocity): linked player textures

* fix(bungeecord): apply linked textures

* Made the MojangUtils class instance based, removed some unneeded code

* Don't block Velocity event threads, made the Bungee variant work

* Add some comments

---------

Co-authored-by: bridge <haha@haha.com>
Co-authored-by: Tim203 <mctim203@gmail.com>